# pyproject.toml
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-commit-assistant"
version = "1.1.0"
requires-python = ">=3.10"
dependencies = [
    "typer",
    "rich",
    "pycountry",
    "python-dotenv",
    "google-genai",
]

[tool.setuptools]
py-modules = ["main", "git_utils", "llm", "help", "prompts"]

[project.scripts]
aicm = "main:app"